--- a/package.json
+++ b/package.json
@@ -1,56 +1,41 @@
 {
   "private": true,
-  "name": "personal-site",
+  "name": "personal-site-v2",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "test": "jest ./tests"
+    "lint": "eslint src",
+    "test": "jest"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "eslintConfig": {
+    "extends": "preact",
+    "ignorePatterns": [
+      "build/"
+    ]
   },
-  "lint-staged": {
-    "*.{css,md,scss}": "prettier --write",
-    "*.{js,jsx,ts,tsx}": "eslint --fix"
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-preact-pure": "^2.0.0",
+    "eslint": "^6.0.1",
+    "eslint-config-preact": "^1.1.0",
+    "jest": "^24.9.0",
+    "jest-preset-preact": "^1.0.0",
+    "preact-cli": "^3.0.0",
+    "sirv-cli": "1.0.3"
   },
-  "eslintIgnore": [
-    "build/*"
-  ],
   "dependencies": {
-    "preact": "^10.3.1",
-    "preact-jsx-chai": "^3.0.0",
-    "preact-markup": "^2.0.0",
+    "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1"
   },
-  "devDependencies": {
-    "@types/jest": "^25.1.2",
-    "@types/webpack-env": "^1.15.1",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "css-loader": "^1.0.1",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "husky": "^4.2.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.0.7",
-    "preact-cli": "^3.0.0-next.19",
-    "preact-render-spy": "^1.3.0",
-    "prettier": "^1.19.1",
-    "sirv-cli": "^1.0.0-next.3",
-    "ts-jest": "^25.2.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
-    "typings-for-css-modules-loader": "^1.7.0"
+  "jest": {
+    "preset": "jest-preset-preact",
+    "setupFiles": [
+      "<rootDir>/tests/__mocks__/browserMocks.js",
+      "<rootDir>/tests/__mocks__/setupTests.js"
+    ]
   }
 }
